--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
     // Login button click handler
     document.getElementById('login-btn').addEventListener('click', () => {
       const siteUrl = window.location.origin;
-      window.location.href = `https://auth.itrrc.com?callback=${siteUrl}/success.html`;
+      window.location.href = `http://auth.itrrc.com?callback=${siteUrl}/success.html`;
     });
 
     // Logout button click handler
